--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">    
     <link rel="stylesheet" href="https://bootswatch.com/4/yeti/bootstrap.min.css">
     <title>Book Collection</title>
 </head>
 <body>
     <div class="container mt-4">
-        <h1 class="display-4 text-center"> <i class="fas fa-book-open text-success"></i> <span class="text-success">Book</span> Collection</h1>
+        <h1 class="display-4 text-center"> <i class="fas fa-book text-success"></i> <span class="text-success">Book</span> Collection</h1>
         <form id="book-form">
             <div class="form-group">
                 <label for="title">Title</label>
